--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="book.png">
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="js/DataTables/datatables.min.css" />
-    <link rel="stylesheet" href="web-fonts-with-css/css/fontawesome-all.min.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
 </head>
 
 <body>
