--- a/about.html
+++ b/about.html
@@ -3,14 +3,16 @@
 
 <head>
     <title>About</title>
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="img/book.png">
     <link rel="stylesheet" href="css/bootstrap.min.css" />
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand mt-xl-0" href="home.html" style="background:white; color:#007bff; border-radius: 8px; padding: inherit">
-            <img src="book.png" width="30" height="30" class="d-inline-block align-top" alt="" />ookstore</a>
+            <img src="img/book.png" width="30" height="30" class="d-inline-block align-top" alt="" />ookstore</a>
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item">
                 <a class="nav-link" href="home.html">Home</a>
@@ -44,7 +46,7 @@
         </div>
     </div>
     <div class="jumbotron col-md-8 offset-md-2">
-        <img src="jake_andrew_luke.jpg" class="img-thumbnail" alt="all_three_of_us" width="360" height="360">
+        <img src="img/jake_andrew_luke.jpg" class="img-thumbnail" alt="all_three_of_us" width="360" height="360">
         <p class="lead">The Crew</p>
         <hr>
         <p>
