--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <title>Bookstore</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="book.png">
+    <link rel="icon" href="img/book.png">
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="js/DataTables/datatables.min.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand mt-xl-0" href="home.html" style="background:white; color:#007bff; border-radius: 8px; padding: inherit">
-            <img src="book.png" width="30" height="30" class="d-inline-block align-top" alt="" />ookstore</a>
+            <img src="img/book.png" width="30" height="30" class="d-inline-block align-top" alt="" />ookstore</a>
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item active">
                 <a class="nav-link" href="#">Home
